--- a/Objects/9_7_Segment_Normalflow.build_log.htm
+++ b/Objects/9_7_Segment_Normalflow.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.27.1.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Boaz Lawnce, JP College of Arts and Science, LIC=----
+License Information: Boaz Lawnce, Nissi Embedded Lab, LIC=----
  
 Tool Versions:
 Toolchain:       PK51 Prof. Develpers Kit  Version: 9.60.0.0
@@ -18,8 +18,8 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
-D:\JP College\Course\8051\PPTs\Program Folder\9_7_Segment_Normalflow\9_7_Segment_Normalflow.uvproj
-Project File Date:  05/03/2020
+C:\Users\Boaz\Documents\GitHub\8051_7_Segment_Normalflow\9_7_Segment_Normalflow.uvproj
+Project File Date:  05/11/2020
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -29,7 +29,7 @@ linking...
 Program Size: data=11.0 xdata=0 code=631
 creating hex file from ".\Objects\9_7_Segment_Normalflow"...
 ".\Objects\9_7_Segment_Normalflow" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
